--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.modelmapper:modelmapper:2.3.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	compileOnly group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compileOnly group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
