--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	compileOnly group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	compileOnly group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
