--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-mapStructVersion = 1.4.1    
+mapStructVersion = 1.4.1
+
+cloudinaryCloudName = dr6odau4r
+cloudinaryApiKey = 182146525651973
+cloudinaryApiSecret = 4im88apKmYjaURxOtASiMx1JfVU
