create first version on JWT Token Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ mapStructVersion = 1.4.1
 cloudinaryCloudName = dr6odau4r
 cloudinaryApiKey = 182146525651973
 cloudinaryApiSecret = 4im88apKmYjaURxOtASiMx1JfVU
+
+
+codeenthusiasts.jwtSecret= securitySecretKey
+codeenthusiasts.jwtExpirationMs= 86400000
