--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ apply plugin: 'net.ltgt.apt-eclipse'
 
 group = 'codeenthusiast'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+targetCompatibility = 11
+sourceCompatibility = 11
 
 repositories {
 	mavenCentral()
