add all methods for muscle controller - with service and repo

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url = jdbc:postgresql://localhost:5432/trainingcenterapp
 
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 spring.datasource.username = postgres
 spring.datasource.password = password321
