rework entites - add parent id in muscle and movement

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,10 +1,10 @@
 
 #spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url = jdbc:postgresql://localhost:5432/trainingcenterapp
 
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 spring.datasource.username = postgres
 spring.datasource.password = password321
