--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -4,3 +4,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
